Fix an issue with completion percent was not visible when hitting 100%

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -301,15 +301,17 @@ $brandcolorsoftcoursedefault: orange;
                                 display: flex;
                                 height: 30px;
                                 width: 100%;
+                                align-items: center;
+                                justify-content: center;
+                                margin-bottom: 0;
+                                margin-top: auto;
                             }
 
                             .fa-leanpub {
-                                bottom: 15px;
                                 color: $brandcolorsoftcoursedefault;
                                 color: $brandcolorsoftcoursebrand;
                                 font-size: 1rem;
                                 opacity: 0;
-                                position: absolute;
                                 transition: opacity .5s ease;
 
                                 &::before {
@@ -318,26 +320,16 @@ $brandcolorsoftcoursedefault: orange;
                             }
 
                             .softcourse-activities-count {
-                                bottom: 11px;
                                 color: $brandcolorsoftcoursedefault;
                                 color: $brandcolorsoftcoursebrand;
                                 font-size: 1rem;
-                                left: 30px;
                                 opacity: 0;
-                                position: absolute;
                                 transition: opacity .5s ease;
-
-                                @media only screen and (max-width: 710px) {
-                                    left: 127px;
-                                }
                             }
 
                             .progress {
-                                bottom: 15px;
                                 display: inline-flex;
                                 opacity: 0;
-                                position: absolute;
-                                right: 55px;
                                 transition: opacity .5s ease;
                                 width: calc(100% - 100px);
 
@@ -351,13 +343,10 @@ $brandcolorsoftcoursedefault: orange;
                             }
 
                             .progress-percent {
-                                bottom: 13px;
                                 color: $brandcolorsoftcoursedefault;
                                 color: $brandcolorsoftcoursebrand;
                                 margin-left: 5px;
                                 opacity: 0;
-                                position: absolute;
-                                right: 15px;
                                 transition: opacity .5s ease;
                             }
 
